# mikrotik-voucherer

./: .gitignore  Makefile  README.rst  pyproject.toml
rpi/: README.rst
rpi/bootfs/: custom.toml
rpi/rootfs/etc/: mikrotik-voucherer
rpi/rootfs/etc/gpio/: 22
rpi/rootfs/etc/systemd/system/: mikrotik-voucherer.service
voucherer/: __init__.py  __main__.py  client.py  commands.py  credentials.py  mikrotik.py  server.py
